fix: more padding on mobile to filter

--- a/src/app/blog/blog-overview/blog-overview.component.scss
+++ b/src/app/blog/blog-overview/blog-overview.component.scss
@@ -16,4 +16,8 @@
   input {
     margin-bottom: 15px;
   }
+
+  .active-keyword-filter {
+    padding-bottom: 20px;
+  }
 }
